<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
      <variable
          name="viewModel"
          type="com.udacity.chatto.login.SigninViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.SigninFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/Theme.Chatto.backgtound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <!-- TODO: Update blank fragment layout -->

            <androidx.cardview.widget.CardView
                android:id="@+id/form"
                style="@style/Theme.Chatto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/lowerauthntibutton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminateTint="@color/pink"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        android:background="@null"
                        setvisibility="@{viewModel.loading}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/appCompatButton" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/changestate"
                        set_form_authentication_state_changer="@{viewModel.modesignin}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        setvisibility="@{!viewModel.loading}"
                        android:background="@android:color/transparent"
                        android:onClick="@{()->viewModel.authintication_state_change()}"
                        android:textSize="18sp"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sumbit"
                        tools:visibility="visible" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/sumbit"
                        set_form_authentication_button_text="@{viewModel.modesignin}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/buttonbackground"
                        android:backgroundTint="@color/pink"
                        android:onClick="@{()->viewModel.validate_and_sumbit()}"
                        setvisibility="@{!viewModel.loading}"
                        android:padding="10dp"
                        android:textColor="?attr/cardBackgroundColor"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/appCompatButton"
                        tools:visibility="visible" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/imageconstrraint"
                        setvisibility="@{!viewModel.modesignin}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/guideline2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent=".30" />

                        <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/guideline3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent=".60" />

                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:id="@+id/profileimage"
                            pick_image_from_bitmap="@{viewModel.selctedimage}"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_marginTop="10dp"
                            android:contentDescription="@string/picked_profile_image"
                            android:src="@drawable/person"
                            app:layout_constraintDimensionRatio="W,1:1"
                            app:layout_constraintEnd_toEndOf="@id/guideline3"
                            app:layout_constraintStart_toStartOf="@id/guideline2"
                            app:layout_constraintTop_toTopOf="parent" />

                        <LinearLayout
                            android:id="@+id/pickgallery"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintEnd_toStartOf="@+id/pickcamera"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintHorizontal_chainStyle="packed"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/profileimage">

                            <ImageView
                                android:layout_width="30sp"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/pick_image_from_gallery"
                                android:scaleType="fitXY"
                                android:src="@drawable/ic_baseline_image_24" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gallerypicking"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/pickcamera"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:orientation="horizontal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/pickgallery"
                            app:layout_constraintTop_toBottomOf="@+id/profileimage">

                            <ImageView
                                android:layout_width="30sp"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/pick_image_from_camera"
                                android:scaleType="fitXY"
                                android:src="@drawable/ic_baseline_camera_alt_24" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/camerapicking"
                                android:textSize="16sp" />
                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/Name_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        Name_error="@{viewModel.nameerror}"
                        setvisibility="@{!viewModel.modesignin}"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="9dp"
                        android:hint="@string/name"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/pink"
                        app:boxStrokeWidth="5dp"
                        app:boxStrokeWidthFocused="5dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="20"
                        app:errorIconDrawable="@drawable/ic_baseline_error_24"
                        app:errorIconTint="@color/rederror"
                        app:hintTextAppearance="@style/hinttext"

                        app:hintTextColor="@color/pink"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imageconstrraint"
                        app:startIconDrawable="@drawable/ic_baseline_person_24"
                        app:startIconTint="@color/pink">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/Name_input_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onTextChanged="@{()->viewModel.clear_nameerror()}"
                            android:text="@={viewModel.name}"
                            android:textSize="18sp"
                            tools:ignore="DuplicateClickableBoundsCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        email_error="@{viewModel.emailerror}"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="9dp"
                        android:hint="@string/email"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/pink"
                        app:boxStrokeWidth="5dp"
                        app:boxStrokeWidthFocused="5dp"
                        app:errorIconDrawable="@drawable/ic_baseline_error_24"
                        app:errorIconTint="@color/rederror"
                        app:hintTextAppearance="@style/hinttext"
                        app:hintTextColor="@color/pink"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/Name_input_layout"
                        app:startIconDrawable="@drawable/ic_baseline_email_24"
                        app:startIconTint="@color/pink">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_input_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onTextChanged="@{()->viewModel.clear_emailerror()}"
                            android:text="@={viewModel.email}"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        password_error="@{viewModel.passworderror}"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="9dp"
                        android:hint="@string/password"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/pink"
                        app:boxStrokeWidth="5dp"
                        app:boxStrokeWidthFocused="5dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="16"
                        app:endIconMode="password_toggle"
                        app:errorIconDrawable="@drawable/ic_baseline_error_24"
                        app:errorIconTint="@color/rederror"
                        app:hintTextAppearance="@style/hinttext"
                        app:hintTextColor="@color/pink"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/email_input_layout"
                        app:startIconDrawable="@drawable/ic_baseline_lock_24"
                        app:startIconTint="@color/pink">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_input_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:onTextChanged="@{()->viewModel.clear_passworderror()}"
                            android:text="@={viewModel.password}"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/appCompatButton"
                        setvisibility="@{viewModel.modesignin}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/forget_password"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/password_input_layout" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lowerauthntibutton"
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/form">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/facebook_button"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/facebook"
                    android:contentDescription="@string/continue_with_facebook_authntication"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/google_button"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/google_button"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/google"
                    android:contentDescription="@string/continue_with_google_authinitication"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/facebook_button"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>